<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mkenlo.zeroxcuse.MainActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fitness_cover" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_medium">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@string/font_family_medium"
                android:paddingBottom="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_small"
                android:text="@string/app_name"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_centerHorizontal="true"
                android:fontFamily="@string/font_family_light"
                android:paddingBottom="@dimen/spacing_small"
                android:text="@string/address" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/address"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/website"
                android:layout_alignBottom="@+id/website"
                android:layout_alignLeft="@+id/address"
                android:layout_alignStart="@+id/address"
                android:fontFamily="@string/font_family_light"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_small"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/address"
                android:layout_alignRight="@+id/address"
                android:layout_below="@+id/address"
                android:fontFamily="@string/font_family_medium"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_small"
                android:text="@string/website"
                android:textColor="@color/colorAccent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/phone"
                android:background="#bdbdbd" />

            <TextView
                android:id="@+id/open_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/phone"
                android:layout_alignStart="@+id/phone"
                android:layout_below="@+id/view"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_marginStart="@dimen/spacing_large"
                android:fontFamily="@string/font_family_medium"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_small"
                android:text="@string/open_from"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/website"
                android:layout_marginLeft="@dimen/spacing_small_bis"
                android:layout_marginStart="@dimen/spacing_small_bis"
                android:layout_toEndOf="@+id/open_from"
                android:layout_toRightOf="@+id/open_from"
                android:fontFamily="@string/font_family_medium"
                android:padding="@dimen/spacing_small"
                android:text="@string/schedule"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/schedule"
                android:layout_centerHorizontal="true"
                android:fontFamily="@string/font_family_regular"
                android:paddingBottom="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_small"
                android:text="@string/description"
                android:textAlignment="center" />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/spacing_small"
            android:background="@color/colorPrimary"
            android:fontFamily="@string/font_family_medium"
            android:text="@string/signin"
            android:textAllCaps="true"
            android:textColor="@color/textHighLightColor"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>

</ScrollView>
